--- a/FitnessTracker/src/main/webapp/WEB-INF/web.xml
+++ b/FitnessTracker/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,11 @@
  		<servlet-name>fitTrackerServlet</servlet-name>
  		<url-pattern>*.html</url-pattern>
  	</servlet-mapping>
+
+ 	<servlet-mapping>
+ 		<servlet-name>fitTrackerServlet</servlet-name>
+ 		<url-pattern>/PDFs/**</url-pattern>
+ 	</servlet-mapping>
  	
 	<display-name>Archetype Created Web Application</display-name>
 </web-app>
