--- a/FitnessTracker/src/main/webapp/WEB-INF/web.xml
+++ b/FitnessTracker/src/main/webapp/WEB-INF/web.xml
@@ -24,5 +24,10 @@
  		<url-pattern>/PDFs/**</url-pattern>
  	</servlet-mapping>
  	
+ 	<servlet-mapping>
+ 		<servlet-name>fitTrackerServlet</servlet-name>
+ 		<url-pattern>*.json</url-pattern>
+ 	</servlet-mapping>
+ 	
 	<display-name>Archetype Created Web Application</display-name>
 </web-app>
